# bussola-etl-siafe

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-docker.yml  test.yml
bussola_etl_siafe/: __init__.py  __main__.py  siafe.py
bussola_etl_siafe/components/: filters.py
test/: test_siafe_basic.py
